--- a/mapsted-sample-cordova/platforms/android/app/src/main/res/xml/config.xml
+++ b/mapsted-sample-cordova/platforms/android/app/src/main/res/xml/config.xml
@@ -15,8 +15,8 @@
         <param name="android-package" value="org.apache.cordova.statusbar.StatusBar" />
         <param name="onload" value="true" />
     </feature>
-    <feature name="CordovaPluginMapsted">
-        <param name="android-package" value="cordova.plugin.mapsted.CordovaPluginMapsted" />
+    <feature name="MapstedCordovaPlugin">
+        <param name="android-package" value="mapsted.cordova.plugin.MapstedCordovaPlugin" />
     </feature>
     <feature name="CDVIonicKeyboard">
         <param name="android-package" onload="true" value="io.ionic.keyboard.CDVIonicKeyboard" />
